--- a/pages/accountant/tccs/tccs-details.html
+++ b/pages/accountant/tccs/tccs-details.html
@@ -1,7 +1,7 @@
-<include>accountant/head</include>
+<include>admin/head</include>
 <main id="main">
   <div class="page" data-view="details" data-title="TCC Details">   
     <include>_partials/details</include>
   </div>
 </main>
-<include>accountant/tail</include>
+<include>admin/tail</include>
