--- a/pages/accountant/tccs/tccs-list.html
+++ b/pages/accountant/tccs/tccs-list.html
@@ -1,7 +1,7 @@
-<include>accountant/head</include>
+<include>admin/head</include>
 <main id="main">
   <div class="page" data-view="list" data-title="FIA TAX Clearances">   
     <include>_partials/list</include>
   </div>
 </main>
-<include>accountant/tail</include>
+<include>admin/tail</include>
