RC275 - FIA / AIT rename + .gitignore + admin/tcc/details view update + Admin bottom menu items order change.

--- a/pages/_templates/default-theme/admin/head.html
+++ b/pages/_templates/default-theme/admin/head.html
@@ -61,7 +61,7 @@
       <button type="button" onclick="F1.app.navigateTo({url:'admin/trades?back=dashboard', view:'list', title:'Trades'})">
         <i class="fa fa-money fa-lg"></i><span>Trades</span>
       </button> 
-      <button type="button" onclick="F1.app.navigateTo({url:'admin/tccs?back=dashboard', view:'list', title:'FIA TAX Clearances'})">
+      <button type="button" onclick="F1.app.navigateTo({url:'admin/tccs?back=dashboard', view:'list', title:'AIT TAX Clearances'})">
         <i class="fa fa-star-o fa-lg"></i><span>TCC's</span>
       </button>
       <button type="button" onclick="F1.app.navigateTo({url:'admin/users?back=dashboard', view:'list', title:'Users'})">
