--- a/pages/_templates/default-theme/admin/tail.html
+++ b/pages/_templates/default-theme/admin/tail.html
@@ -16,16 +16,16 @@
     <span>Clients</span>
     <hr>
   </a>
+  <a href="admin/tccs?back=dashboard" id="nav-item-tccs" class="nav-item"
+    onclick="F1.app.navigateTo({event, view:'list', title:'AIT TAX Clearances'})">
+    <i class="fa fa-star-o fa-lg"></i>
+    <span>TCC's</span>
+    <hr>
+  </a>  
   <a href="admin/trades?back=dashboard" id="nav-item-trades" class="nav-item"
     onclick="F1.app.navigateTo({event, view:'list', title:'Trades'})">
     <i class="fa fa-money fa-lg"></i>
     <span>Trades</span>
-    <hr>
-  </a>
-  <a href="admin/tccs?back=dashboard" id="nav-item-tccs" class="nav-item"
-    onclick="F1.app.navigateTo({event, view:'list', title:'FIA TAX Clearances'})">
-    <i class="fa fa-star-o fa-lg"></i>
-    <span>TCC's</span>
     <hr>
   </a>
 </nav>
