--- a/pages/accountant/clients/_partials/list.html
+++ b/pages/accountant/clients/_partials/list.html
@@ -4,7 +4,7 @@
     <table id="clients-table" data-status="<?=$status?>">
       <thead>
         <tr>
-          <th>Statuds</th>
+          <th>Status</th>
           <th>Client</th>
           <th>Tax Number</th>
           <th>SDA Mandate</th>
